# rusty-cdk

./: .gitignore  ADDING_RESOURCES.md  Cargo.toml  LICENSE.md  README.md
cargo-rusty/: Cargo.toml  README.md
cargo-rusty/src/: lib.rs  main.rs
cloud-infra/: Cargo.toml
cloud-infra-core/: Cargo.toml
cloud-infra-core/src/: lib.rs
cloud-infra-core/src/apigateway/: builder.rs  dto.rs
cloud-infra-core/src/appconfig/: builder.rs  dto.rs  mod.rs
cloud-infra-core/src/cloudfront/: builder.rs  dto.rs  mod.rs
cloud-infra-core/src/cloudwatch/: builder.rs  dto.rs
cloud-infra-core/src/dynamodb/: builder.rs  dto.rs
cloud-infra-core/src/iam/: builder.rs  dto.rs  mod.rs  permission_mapper.rs  services_names
cloud-infra-core/src/intrinsic_functions/: mod.rs
cloud-infra-core/src/lambda/: builder.rs  dto.rs
cloud-infra-core/src/s3/: builder.rs  dto.rs  mod.rs
cloud-infra-core/src/secretsmanager/: builder.rs  dto.rs
cloud-infra-core/src/shared/: http.rs  macros.rs  mod.rs  ref_structs.rs
cloud-infra-core/src/sns/: builder.rs  dto.rs
cloud-infra-core/src/sqs/: builder.rs  dto.rs  mod.rs
cloud-infra-core/src/stack/: builder.rs  dto.rs  mod.rs
cloud-infra-core/src/wrappers/: mod.rs
cloud-infra-core/tests/: compilation_failure_tests.rs  compilation_tests.rs
cloud-infra-core/tests/fails/: no_content_based_dedup_for_standard_queue.rs  no_content_based_dedup_for_standard_queue.stderr  no_deduplication_scope_for_standard_queue.rs  no_deduplication_scope_for_standard_queue.stderr  no_max_read_capacity_for_provisioned.rs  no_max_read_capacity_for_provisioned.stderr  no_read_capacity_for_pay_per_request.rs  no_read_capacity_for_pay_per_request.stderr
cloud-infra-macros/: Cargo.toml
cloud-infra-macros/src/: bucket.rs  bucket_name.rs  file_util.rs  iam_validation.rs  lib.rs  permissions.csv  strings.rs
cloud-infra-macros/tests/: compilation_tests.rs
cloud-infra-macros/tests/fails/: bucket_arn_passed_in.rs  bucket_arn_passed_in.stderr  bucket_name_illegal_underscore.rs  bucket_name_uppercase_letters.rs  bucket_name_uppercase_letters.stderr  delay_seconds_boundary_high.rs  delay_seconds_boundary_high.stderr  delay_seconds_too_high.rs  delay_seconds_too_high.stderr  env_var_key_invalid_chars.rs  env_var_key_invalid_chars.stderr  env_var_key_starts_with_underscore.rs  env_var_key_starts_with_underscore.stderr  env_var_key_too_short.rs  env_var_key_too_short.stderr  iam_action_empty_string.rs  iam_action_invalid_permission.rs  iam_action_invalid_permission.stderr  iam_action_missing_colon.rs  iam_action_missing_colon.stderr  iam_action_unknown_service.rs  iam_action_unknown_service.stderr  lifecycle_object_sizes_first_larger_than_second.rs  lifecycle_object_sizes_first_larger_than_second.stderr  lifecycle_object_sizes_not_numbers.rs  lifecycle_object_sizes_not_numbers.stderr  log_group_name_empty.rs  log_group_name_invalid_chars.rs  log_group_name_invalid_chars.stderr  log_retention_invalid_string.rs  log_retention_invalid_value.rs  log_retention_invalid_value.stderr  log_retention_zero.rs  maximum_message_size_boundary_high.rs  maximum_message_size_boundary_high.stderr  maximum_message_size_boundary_low.rs  maximum_message_size_boundary_low.stderr  maximum_message_size_too_high.rs  maximum_message_size_too_high.stderr  maximum_message_size_too_low.rs  (+42 more)
cloud-infra/src/: deploy.rs  lib.rs  synth.rs
cloud-infra/tests/: snapshots.rs
cloud-infra/tests/snapshots/: snapshots__appconfig.snap  snapshots__bucket.snap  snapshots__cloudfront_with_s3_origin.snap  snapshots__dynamodb.snap  snapshots__lambda.snap  snapshots__lambda_with_api_gateway.snap  snapshots__lambda_with_dynamodb.snap  snapshots__lambda_with_dynamodb_and_sqs.snap  snapshots__lambda_with_secret_and_custom_permissions.snap  snapshots__lambda_with_sns_subscription.snap  snapshots__sns.snap  snapshots__sqs.snap  snapshots__website_bucket.snap
resources-scraper/: Cargo.toml  README.md  list_of_urls
resources-scraper/src/: main.rs
resources-scraper/src/dto_builder/: main.rs
resources-scraper/src/helper_builder/: main.rs
resources-scraper/src/resource_builder/: main.rs
resources-scraper/src/retrieve_resources/: main.rs
resources-scraper/src/retrieve_urls/: main.rs
rusty-cdk/: Cargo.toml  README.md
rusty-cdk-core/: Cargo.toml  README.md
rusty-cdk-core/src/: lib.rs
rusty-cdk-core/src/apigateway/: builder.rs  dto.rs
rusty-cdk-core/src/appconfig/: builder.rs  dto.rs
rusty-cdk-core/src/appsync/: builder.rs  dto.rs  mod.rs
rusty-cdk-core/src/cloudfront/: builder.rs  dto.rs
rusty-cdk-core/src/cloudwatch/: builder.rs  dto.rs
rusty-cdk-core/src/cloudwatch_logs/: builder.rs  mod.rs
rusty-cdk-core/src/custom_resource/: builder.rs  dto.rs
rusty-cdk-core/src/docdb/: builder.rs  dto.rs
rusty-cdk-core/src/documentdb/: builder.rs  dto.rs
rusty-cdk-core/src/dynamodb/: builder.rs  dto.rs
rusty-cdk-core/src/ecr/: builder.rs  dto.rs
rusty-cdk-core/src/events/: builder.rs  dto.rs
rusty-cdk-core/src/iam/: builder.rs  dto.rs  mod.rs  permission_mapper.rs
rusty-cdk-core/src/intrinsic/: intrinsic_functions.rs  mod.rs  pseudo_params.rs
rusty-cdk-core/src/intrinsic_functions/: mod.rs
rusty-cdk-core/src/kms/: dto.rs
rusty-cdk-core/src/lambda/: builder.rs  dto.rs
rusty-cdk-core/src/s3/: builder.rs  dto.rs
rusty-cdk-core/src/secretsmanager/: builder.rs  dto.rs
rusty-cdk-core/src/shared/: constants.rs  http.rs  (+5 more)
rusty-cdk-core/tests/: compilation_tests.rs
rusty-cdk-lookups/: Cargo.toml  README.md
rusty-cdk-lookups/src/: cloudcontrol.rs  lib.rs  parsing.rs  roles.rs
rusty-cdk-macros/: Cargo.toml  README.md
rusty-cdk-macros/src/: bucket.rs  bucket_name.rs  bucket_tiering.rs  cron_validation.rs  file_util.rs  iam_validation.rs  instance_class.rs  lib.rs  location_uri.rs  object_sizes.rs  period_validation.rs  permissions.csv  rate_expression.rs  schedule_validation.rs  strings.rs  timeouts.rs  transition_in_days.rs
rusty-cdk-macros/tests/: compilation_tests.rs
rusty-cdk/src/: deploy.rs  destroy.rs  diff.rs  lib.rs  util.rs
rusty-cdk/tests/: existing_stack.json  snapshots.rs
(+163 files in other folders)
