[package]
name = "cargo-rusty"
version = "0.7.0"
edition = "2024"
description = "Tooling to deploy, diff, destroy... the rusty-cdk"
license = "MIT"
homepage = "https://github.com/VanOvermeire/rusty-cdk"
repository = "https://github.com/VanOvermeire/rusty-cdk"
keywords = ["AWS", "CDK", "CloudFormation", "IAC"]

[[bin]]
name = "cargo-rusty"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
rusty-cdk = { version = "0.7.0", path = "../rusty-cdk" }