[package]
name = "cloud-infra-core"
version = "0.1.0"
edition = "2024"

[dependencies]
cloud-infra-macros = { version = "0.1.0", path = "../cloud-infra-macros" }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
serde_json = "1.0.142"

[dev-dependencies]
trybuild = "1.0.110"
