[package]
name = "cloud-infra-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = "2.0.104"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.103.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
serde_json = "1.0.142"

[dev-dependencies]
trybuild = "1.0.110"
