[package]
name = "cloud-infra"
version = "0.1.0"
edition = "2024"

[dependencies]
cloud-infra-core = { version = "0.1.0", path = "../cloud-infra-core" }
cloud-infra-macros = { version = "0.1.0", path = "../cloud-infra-macros" }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
aws-sdk-cloudformation = "1.90.0"
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
serde_json = "1.0.142"
aws-sdk-s3 = "1.103.0"

[dev-dependencies]
insta = {  version = "1.43.1", features = ["json", "filters"] }
serde_json = "1.0.142"