[package]
name = "resources-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
change-case = "0.2.0"
rayon = "1.11.0"
regex = "1.12.2"
reqwest = {  version = "0.12.3", features = ["blocking"] }
scraper = "0.24.0"

[[bin]]
name = "urls"
path = "src/retrieve_urls/main.rs"

[[bin]]
name = "resources"
path = "src/retrieve_resources/main.rs"

[[bin]]
name = "builder"
path = "src/resource_builder/main.rs"
