[package]
name = "rusty-cdk-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rusty-cdk-macros = { version = "0.1.0", path = "../rusty-cdk-macros" }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
serde_json = "1.0.142"

[dev-dependencies]
trybuild = "1.0.110"
