[package]
name = "rusty-cdk-core"
version = "0.5.0"
edition = "2024"
description = "Core of the rusty-cdk containing the builders, dtos and wrappers"
license = "MIT"
homepage = "https://github.com/VanOvermeire/rusty-cdk"
repository = "https://github.com/VanOvermeire/rusty-cdk"
keywords = ["AWS", "CDK", "CloudFormation", "IAC"]

[dependencies]
rusty-cdk-macros = { version = "0.5.0", path = "../rusty-cdk-macros" }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
serde_json = "1.0.142"

[dev-dependencies]
trybuild = "1.0.110"
