[package]
name = "rusty-cdk-lookups"
version = "0.6.1"
edition = "2024"
description = "Lookup macros of the rusty-cdk"
license = "MIT"
homepage = "https://github.com/VanOvermeire/rusty-cdk"
repository = "https://github.com/VanOvermeire/rusty-cdk"
keywords = ["AWS", "CDK", "CloudFormation", "IAC"]

[lib]
proc-macro = true

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-cloudcontrol = "1.91.0"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
serde_json = "1.0.142"
syn = "2.0.104"
tokio = { version = "1", features = ["full"] }