[package]
name = "rusty-cdk"
version = "0.6.2"
edition = "2024"

description = "A safer alternative to the AWS CDK"
license = "MIT"
homepage = "https://github.com/VanOvermeire/rusty-cdk"
repository = "https://github.com/VanOvermeire/rusty-cdk"
keywords = ["AWS", "CDK", "CloudFormation", "IAC"]
readme = "../README.md"

[dependencies]
rusty-cdk-core = { version = "0.6.2", path = "../rusty-cdk-core" }
rusty-cdk-macros = { version = "0.6.2", path = "../rusty-cdk-macros" }
rusty-cdk-lookups = { version = "0.6.2", path = "../rusty-cdk-lookups" }
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-cloudformation = "1.90.0"
aws-sdk-s3 = "1.103.0"

[dev-dependencies]
insta = {  version = "1.43.1", features = ["json", "filters"] }
serde_json = "1.0.142"